--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -912,7 +912,7 @@
 		left: 0;
 		padding: ($size-header-pad * 2) $size-header-pad;
 		position: fixed;
-		text-align: right;
+		text-align: center;
 		top: 0;
 		width: $size-header-width;
 
@@ -942,8 +942,8 @@
 		}
 
 		.image.avatar {
-			margin: 0 0 (_size(element-margin) * 0.5) 0;
-			width: 6.25em;
+			margin: 0 0 (_size(element-margin) * 0.8) 0;
+			width: 9.25em;
 		}
 	}
 
@@ -1500,4 +1500,22 @@
 	.\34 u24 {
 		width: 100%;
 	}
+}
+.send-btn {
+	text-decoration: none;
+	
+	text-align: center;
+	background-color: rgb(240, 233, 233);
+	height: 40px;
+	border: none;
+	border-radius: 3px;
+	width: 150px;
+	font-size: 15px;
+	font-weight: bold;
+}
+.send-btn a {
+	text-decoration: none;
+}
+.layout {
+	background-color: #001a33;
 }
